--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
    - assets/images/card_6.png
    - assets/images/card_7.png
    - assets/images/card_8.png
-   - assets/images/
+   - assets/images/dog2.jpg
    
   #  - images/a_dot_ham.jpeg
 
