--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,35 +19,33 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: 
-  line_icons: ^0.2.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  flutter_svg: ^0.17.4
-  font_awesome_flutter: ^8.8.1
-  modal_progress_hud: ^0.1.3
   cloud_firestore: ^0.13.7
+  cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
   firebase_storage: ^3.1.6
+  flutter_svg: ^0.17.4
   fluttertoast: ^5.0.1
-  image_picker: ^0.6.7+3
-  intl: ^0.16.1
-  uuid: ^3.0.4
+  font_awesome_flutter: ^8.8.1
   geolocator: ^5.3.0
   getwidget: ^1.1.0
+  google_fonts: null
+  image_picker: ^0.6.7+3
+  line_icons: ^0.2.0
+  modal_progress_hud: ^0.1.3
+  form_field_validator: ^1.1.0
   provider: ^5.0.0
+  url_launcher: 
+  uuid: ^3.0.4
+  flushbar: ^1.9.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -58,27 +56,23 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/card_dog_1.png
-   - assets/images/card_dog_2.png
-   - assets/images/lolo_dog.png
-   - assets/images/card_1.png
-   - assets/images/card_2.png
-   - assets/images/card_3.png
-   - assets/images/card_4.png
-   - assets/images/card_5.png
-   - assets/images/card_6.png
-   - assets/images/card_7.png
-   - assets/images/card_8.png
-   - assets/images/dog2.jpg
-   
+    - assets/images/card_dog_1.png
+    - assets/images/card_dog_2.png
+    - assets/images/lolo_dog.png
+    - assets/images/card_1.png
+    - assets/images/card_2.png
+    - assets/images/card_3.png
+    - assets/images/card_4.png
+    - assets/images/card_5.png
+    - assets/images/card_6.png
+    - assets/images/card_7.png
+    - assets/images/card_8.png
+    - assets/images/dog2.jpg
   #  - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
